--- a/web-app/views/verify-success.ejs
+++ b/web-app/views/verify-success.ejs
@@ -28,7 +28,7 @@
     <div class="row cert-container card">
             <div class="col-sm-12 card-body ">
                 <div class="row text-center upper-row">
-                    <div class="col-sm-4 orange"> <strong>Name <br></strong> <%= certData.patientName %> </div>
+                    <div class="col-sm-4 orange"> <strong>Patient Name <br></strong> <%= certData.patientName %> </div>
                     <div class="col-sm-4 orange"><strong>Email <br></strong> <%= certData.patientEmail %></div>
                     <div class="col-sm-4 orange"> <strong>Date Of Issuing <br></strong> <%= certData.dateOfIssuing %></div>
                 </div>
@@ -47,27 +47,6 @@
             </div>
         </div>
 
-
-
-
-    <!--    <div class="row cert-container card">-->
-    <!--        <div class="col-sm-12 card-body ">-->
-    <!--            <div class="row text-center upper-row">-->
-    <!--                <div class="col-sm-4 orange"> <strong>Name <br></strong> Tasin Ishmam </div>-->
-    <!--                <div class="col-sm-4 orange"><strong>Email <br></strong> tasinishmam@gmail.com </div>-->
-    <!--                <div class="col-sm-4 orange"><strong>Prescription <br></strong> 3.89</div>-->
-    <!--            </div>-->
-    <!--            <div class="row text-center middle-row">-->
-    <!--                <div class="col-sm-4 orange"> <strong>Dept<br></strong> Electrical Engineering</div>-->
-    <!--                <div class="col-sm-4 orange"><strong>Date Of Issue<br></strong> 5-07-2020 </div>-->
-    <!--                <div class="col-sm-4 orange"><strong>Description <br></strong> Computer Science & Engineering</div>-->
-    <!--            </div>-->
-    <!--            <div class="row text-center bottom-row">-->
-    <!--                <div class="col-sm-4 orange"> <strong>Certificate UUID <br></strong> 4d6b9b114db1380bb8b7f035a2982</div>-->
-    <!--                <div class="col-sm-8 orange"><strong>Certificate Hash<br></strong> baadcdecdc3fd9c613d529ffa2982ed8a901943e66bc28934607804a09b68982 </div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
 
 </div>
 
