--- a/web-app/public/stylesheets/style.css
+++ b/web-app/public/stylesheets/style.css
@@ -32,7 +32,7 @@ body {
 }
 .inline {
   /*display: inline;*/
-  color: rgba(255,255,255,.5);
+  color: rgba(255, 0, 0, 0.8);
 }
 .modal-body{
   word-wrap: break-word;
@@ -69,11 +69,11 @@ body {
 }
 
 .tab-width a {
-  color: #acadaf;
+  color: #CD5C5C;
 }
 
 .nav-item a {
-  color: #acadaf;
+  color: #CD5C5C;
 }
 
 /* Center align the text within the three columns below the carousel */
@@ -106,53 +106,6 @@ body {
 }
 
 
-
-/* Loader
-------------------------- 
-/*!* Center the loader *!*/
-/*#loader {*/
-/*  position: absolute;*/
-/*  left: 50%;*/
-/*  top: 50%;*/
-/*  z-index: 1;*/
-/*  margin: -75px 0 0 -75px;*/
-/*  border: 16px solid #f3f3f3;*/
-/*  border-radius: 50%;*/
-/*  border-top: 16px solid #007aff;*/
-/*  width: 120px;*/
-/*  height: 120px;*/
-/*  -webkit-animation: spin 2s linear infinite;*/
-/*  animation: spin 2s linear infinite;*/
-/*}*/
-
-/*@-webkit-keyframes spin {*/
-/*  0% { -webkit-transform: rotate(0deg); }*/
-/*  100% { -webkit-transform: rotate(360deg); }*/
-/*}*/
-
-/*@keyframes spin {*/
-/*  0% { transform: rotate(0deg); }*/
-/*  100% { transform: rotate(360deg); }*/
-/*}*/
-
-/*!* Add animation to "page content" *!*/
-/*.animate-bottom {*/
-/*  position: relative;*/
-/*  -webkit-animation-name: animatebottom;*/
-/*  -webkit-animation-duration: 1s;*/
-/*  animation-name: animatebottom;*/
-/*  animation-duration: 1s*/
-/*}*/
-
-/*@-webkit-keyframes animatebottom {*/
-/*  from { bottom:-100px; opacity:0 }*/
-/*  to { bottom:0px; opacity:1 }*/
-/*}*/
-
-/*@keyframes animatebottom {*/
-/*  from{ bottom:-100px; opacity:0 }*/
-/*  to{ bottom:0; opacity:1 }*/
-/*}*/
 
 td {
   vertical-align: bottom;
