--- a/web-app/views/dashboard-patient.ejs
+++ b/web-app/views/dashboard-patient.ejs
@@ -57,7 +57,7 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="shareDataModalTitle">Share Certificate</h5>
+                        <h5 class="modal-title" id="shareDataModalTitle">Share Medical Report</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
