--- a/web-app/views/issue-doctor.ejs
+++ b/web-app/views/issue-doctor.ejs
@@ -25,7 +25,7 @@
     <div class="col-md-6">
         <div class="card">
             <header class="card-header">
-                <h4 class="card-title mt-2">Issue Certificate</h4>
+                <h4 class="card-title mt-2">Create Medical Report</h4>
             </header>
             <article class="card-body">
 
@@ -48,7 +48,7 @@
                             </div> <!-- form-group end.// -->
                             <div class="col form-group">
                                 <userName>Prescription</userName>
-                                <input name="prescription" required type="number" class="form-control" step="0.01" min="0" max="4">
+                                <input name="prescription" required type="text" class="form-control" placeholder="">
                             </div> <!-- form-group end.// -->
                         </div> <!-- form-group end.// -->
                         <!-- form-group end.// -->
