--- a/web-app/views/dashboard-patient.ejs
+++ b/web-app/views/dashboard-patient.ejs
@@ -27,7 +27,7 @@
 <!--// Email of patient-->
 <!--//-->
 
-<div class="container justify-content-center"  >
+<div class="container bg-warning justify-content-center"  >
 
 
     <% for(var i=0; i < certData.length; i++) {%>
@@ -44,7 +44,7 @@
                     <div class="col-sm-4 orange"><strong>Disease <br></strong><%= certData[i].disease %></div>
                 </div>
                 <div class="row text-center bottom-row">
-                    <div class="col-sm-4 orange"> <strong>Certificate UUID <br></strong> <%= certData[i].certUUID %></div>
+                    <div class="col-sm-4 orange"> <strong>Certificate ID <br></strong> <%= certData[i].certUUID %></div>
                     <div class="col-sm-4 orange"></div>
                     <button id="shareButton" type="button" class="col-sm-4  btn btn-primary" data-toggle="modal" data-target="#shareDataModal" data-certid="<%= certData[i].certUUID %>">Share Certificate</button>
                 </div>
