--- a/web-app/views/index.ejs
+++ b/web-app/views/index.ejs
@@ -7,7 +7,7 @@
   <base href="/">
   <style>
     html {
-      font-size: 20px;
+      font-size: 27px;
     }
   </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,16 +19,16 @@
 <body>
  <%- include('partials/navbar-partial.ejs') %>
 <div >
-    <div class="container text-center">
-      <h1> Blockchain based Electronic Health Record</h1>
+    <div class="container bg-warning text-center">
+      <h1> Blockchain Based Electronic Health Record</h1>
       <h4></h4>
-      <p><a class="btn btn-primary btn-md" href="/verify" role="button">Verify Records &raquo;</a></p>
+      <p><a class="btn btn-primary btn-md" href="/verify" role="button">Verify Reports &raquo;</a></p>
     </div>
   </div>
 
   <div id="jumbotron-index" class="container marketing">
 
-    <div class="row">
+    <div class="row bg-warning">
       <div class="col-lg-6 text-center">
         <h2>Patients</h2>
         <p>Patients can use our platform to manage and share their prescribed reports.</p>
