--- a/web-app/views/partials/navbar-partial.ejs
+++ b/web-app/views/partials/navbar-partial.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-danger">
     <a class="navbar-brand" href="/"><%= title %></a>
-    <!--    TODO: Instead of saying blockchain certificates all the time, consider making it say doctor, patient and shit.-->
+    <!--    TODO: Instead of saying blockchain certificates all the time, consider making it say doctor, patient.-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-userName="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
