--- a/web-app/views/register-success.ejs
+++ b/web-app/views/register-success.ejs
@@ -17,7 +17,7 @@
 
 <div class="row justify-content-center form-all">
     <div class="col-md-6">
-        <div class="card">
+        <div class="card bg-warning">
             <header class="card-header text-center">
                 <h4 class="card-title mt-2 text-center">Registration Successful</h4>
             </header>
