--- a/web-app/views/verify.ejs
+++ b/web-app/views/verify.ejs
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/style.css">
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+<script src="/js/register.js"></script>
 
 <body class="bg-light">
 
@@ -17,9 +21,9 @@
 
 <div class="row justify-content-center form-all">
     <div class="col-md-5">
-        <div class="card">
+        <div class="card bg-warning" style="max-width: 40rem;" >
             <header class="card-header">
-                <h4 class="card-title mt-2">Verify Certificate Authenticity</h4>
+                <h4 class="card-title mt-2">Verify Shared Report's Authenticity</h4>
             </header>
             <article class="card-body">
 
@@ -27,7 +31,7 @@
                     <div class="form-row">
                         <div class="col form-group">
                             <label for="proofTextArea">Enter Proof Object Here</label>
-                            <textarea name="proofObject" class="form-control" id="proofTextArea" rows="3"></textarea>
+                            <textarea name="proofObject" class="form-control" id="proofTextArea" rows="6"></textarea>
                         </div>
                     </div> <!-- form-row end.// -->
 
@@ -47,7 +51,4 @@
 </body>
 
 </html>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-<script src="/js/register.js"></script>
+
