--- a/web-app/views/verify.ejs
+++ b/web-app/views/verify.ejs
@@ -30,7 +30,7 @@
                 <form action="/verify" method="POST" >
                     <div class="form-row">
                         <div class="col form-group">
-                            <label for="proofTextArea">Enter Proof Object Here</label>
+                            <label for="proofTextArea">Enter Proof Object Here To Verify</label>
                             <textarea name="proofObject" class="form-control" id="proofTextArea" rows="6"></textarea>
                         </div>
                     </div> <!-- form-row end.// -->
